Haiku/bridge/libmojobe/mojobe.h

// #pragma mark - BApplication


// status_t BApplication::Archive(BMessage* data, bool deep) const
status_t mojobe_BApplication_Archive(BApplication* self,
	BMessage* a_data,
	bool a_deep);
// status_t BApplication::InitCheck() const
status_t mojobe_BApplication_InitCheck(BApplication* self);
// thread_id BApplication::Run()
int32 mojobe_BApplication_Run(BApplication* self);
// void BApplication::Quit()
void mojobe_BApplication_Quit(BApplication* self);
// bool BApplication::QuitRequested()
bool mojobe_BApplication_QuitRequested(BApplication* self);
// void BApplication::Pulse()
void mojobe_BApplication_Pulse(BApplication* self);
// void BApplication::ReadyToRun()
void mojobe_BApplication_ReadyToRun(BApplication* self);
// void BApplication::MessageReceived(BMessage* message)
void mojobe_BApplication_MessageReceived(BApplication* self,
	BMessage* a_message);
// void BApplication::AppActivated(bool active)
void mojobe_BApplication_AppActivated(BApplication* self, bool a_active);
// void BApplication::RefsReceived(BMessage* message)
void mojobe_BApplication_RefsReceived(BApplication* self, BMessage* a_message);
// void BApplication::AboutRequested()
void mojobe_BApplication_AboutRequested(BApplication* self);
// void BApplication::ShowCursor()
void mojobe_BApplication_ShowCursor(BApplication* self);
// void BApplication::HideCursor()
void mojobe_BApplication_HideCursor(BApplication* self);
// void BApplication::ObscureCursor()
void mojobe_BApplication_ObscureCursor(BApplication* self);
// bool BApplication::IsCursorHidden() const
bool mojobe_BApplication_IsCursorHidden(BApplication* self);
// int32 BApplication::CountWindows() const
int32 mojobe_BApplication_CountWindows(BApplication* self);
// BWindow* BApplication::WindowAt(int32 index) const
BWindow* mojobe_BApplication_WindowAt(BApplication* self, int32 a_index);
// int32 BApplication::CountLoopers() const
int32 mojobe_BApplication_CountLoopers(BApplication* self);
// bool BApplication::IsLaunching() const
bool mojobe_BApplication_IsLaunching(BApplication* self);
// const char* BApplication::Signature() const
const char* mojobe_BApplication_Signature(BApplication* self);
// void BApplication::SetPulseRate(bigtime_t rate)
void mojobe_BApplication_SetPulseRate(BApplication* self, bigtime_t a_rate);
// status_t BApplication::GetSupportedSuites(BMessage* data)
status_t mojobe_BApplication_GetSupportedSuites(BApplication* self,
	BMessage* a_data);
// status_t BLooper::PostMessage(uint32 command)
status_t mojobe_BApplication_PostMessage__uint32(BApplication* self,
	uint32 a_command);
// status_t BLooper::PostMessage(BMessage* message)
status_t mojobe_BApplication_PostMessage__BMessageP(BApplication* self,
	BMessage* a_message);
// BMessage* BLooper::CurrentMessage() const
BMessage* mojobe_BApplication_CurrentMessage(BApplication* self);
// BMessage* BLooper::DetachCurrentMessage()
BMessage* mojobe_BApplication_DetachCurrentMessage(BApplication* self);
// bool BLooper::IsMessageWaiting() const
bool mojobe_BApplication_IsMessageWaiting(BApplication* self);
// int32 BLooper::CountHandlers() const
int32 mojobe_BApplication_CountHandlers(BApplication* self);
// void BLooper::Loop()
void mojobe_BApplication_Loop(BApplication* self);
// bool BLooper::Lock()
bool mojobe_BApplication_Lock(BApplication* self);
// void BLooper::Unlock()
void mojobe_BApplication_Unlock(BApplication* self);
// bool BLooper::IsLocked() const
bool mojobe_BApplication_IsLocked(BApplication* self);