Haiku/bridge/haiku/_api.mojo

# ===----------------------------------------------------------------------=== #
# Copyright (c) 2026, MojoProse. All rights reserved.
#
# Licensed under the Apache License v2.0 with LLVM Exceptions:
# https://llvm.org/LICENSE.txt
#
# Generated by Haiku/generator/mojobe_gen.py from the Haiku headers and
# bridge.toml. Do not edit: change the generator or its annotations.
# ===----------------------------------------------------------------------=== #
"""The Haiku API's classes, generated from the headers: for each, a
trait with its methods (inheriting its bases'), a reference to one the
kit owns (`BViewRef`), a struct for one Mojo owns (`BView`), and, for
the classes Mojo types may stand behind, the hook traits and tables.
"""

from std.builtin.rebind import downcast
from std.ffi import c_char, external_call

from ._core import (
    _FnPtr,
    _NPtr,
    _Ptr,
    _addr,
    _char,
    _check,
    _destroy,
    _fn_ptr,
    _nonnull,
    _ptr_from,
    _state_at,
    _string_from,
    _string_from_char,
    _to_heap,
    _type_tag,
)
from ._values import _check_layouts
from ._values import BRect, BPoint, rgb_color, pattern, B_SOLID_HIGH
from ._constants import (
    BSpacing,
    alignment,
    alpha_function,
    bitmap_drawing_options,
    bitmap_tiling,
    border_style,
    buffer_layout,
    buffer_orientation,
    button_width,
    cap_mode,
    color_which,
    command_code,
    drawing_mode,
    font_direction,
    font_file_format,
    font_metric_mode,
    join_mode,
    menu_bar_border,
    menu_layout,
    mode_focus_follows_mouse,
    mode_mouse,
    orientation,
    overlay_options,
    rect_tracking_style,
    set_font_mask,
    source_alpha,
    vertical_alignment,
    window_alignment,
    window_feel,
    window_look,
    window_type,
    B_CONTROL_INVOKED,
    B_CURRENT_WORKSPACE,
    B_DEFAULT_MITER_LIMIT,
    B_FOLLOW_LEFT_RIGHT,
    B_FOLLOW_TOP,
    B_FRAME_EVENTS,
    B_INFINITE_TIMEOUT,
    B_ITEMS_IN_COLUMN,
    B_ITEMS_IN_ROW,
    B_NO_TINT,
    B_TRACK_WHOLE_RECT,
    B_WILL_DRAW,
)

# ========================================================================== #
# BApplication
# ========================================================================== #


trait _AsBApplication:
    """Has a `BApplication*` for libmojobe."""

    def _as_BApplication(self) -> _NPtr:
        ...


trait _BApplicationMethods(_AsBApplication):
    """`BApplication`'s methods, for its references and the values Mojo owns."""

    def Archive(self, data: Some[_AsBMessage], deep: Bool = True) raises:
        """`status_t BApplication::Archive(BMessage* data, bool deep) const`."""
        var _result = external_call["mojobe_BApplication_Archive", Int32](
            _nonnull(self._as_BApplication(), "BApplication::Archive"),
            _addr(data._as_BMessage()),
            deep,
        )
        _check(_result, "BApplication::Archive")

    def InitCheck(self) raises:
        """`status_t BApplication::InitCheck() const`."""
        var _result = external_call["mojobe_BApplication_InitCheck", Int32](
            _nonnull(self._as_BApplication(), "BApplication::InitCheck"),
        )
        _check(_result, "BApplication::InitCheck")

    def Run(self) -> Int32:
        """`thread_id BApplication::Run()`."""
        var _result = external_call["mojobe_BApplication_Run", Int32](
            _nonnull(self._as_BApplication(), "BApplication::Run"),
        )
        return _result

    def Quit(self):
        """`void BApplication::Quit()`."""
        external_call["mojobe_BApplication_Quit", NoneType](
            _nonnull(self._as_BApplication(), "BApplication::Quit"),
        )

    def QuitRequested(self) -> Bool:
        """`bool BApplication::QuitRequested()`."""
        var _result = external_call["mojobe_BApplication_QuitRequested", Bool](
            _nonnull(self._as_BApplication(), "BApplication::QuitRequested"),
        )
        return _result

    def Pulse(self):
        """`void BApplication::Pulse()`."""
        external_call["mojobe_BApplication_Pulse", NoneType](
            _nonnull(self._as_BApplication(), "BApplication::Pulse"),
        )

    def ReadyToRun(self):
        """`void BApplication::ReadyToRun()`."""
        external_call["mojobe_BApplication_ReadyToRun", NoneType](
            _nonnull(self._as_BApplication(), "BApplication::ReadyToRun"),
        )

    def MessageReceived(self, message: Some[_AsBMessage]):
        """`void BApplication::MessageReceived(BMessage* message)`."""
        external_call["mojobe_BApplication_MessageReceived", NoneType](
            _nonnull(self._as_BApplication(), "BApplication::MessageReceived"),
            _addr(message._as_BMessage()),
        )

    def AppActivated(self, active: Bool):
        """`void BApplication::AppActivated(bool active)`."""
        external_call["mojobe_BApplication_AppActivated", NoneType](
            _nonnull(self._as_BApplication(), "BApplication::AppActivated"),
            active,
        )

    def RefsReceived(self, message: Some[_AsBMessage]):
        """`void BApplication::RefsReceived(BMessage* message)`."""
        external_call["mojobe_BApplication_RefsReceived", NoneType](
            _nonnull(self._as_BApplication(), "BApplication::RefsReceived"),
            _addr(message._as_BMessage()),
        )

    def AboutRequested(self):
        """`void BApplication::AboutRequested()`."""
        external_call["mojobe_BApplication_AboutRequested", NoneType](
            _nonnull(self._as_BApplication(), "BApplication::AboutRequested"),
        )

    def ShowCursor(self):
        """`void BApplication::ShowCursor()`."""
        external_call["mojobe_BApplication_ShowCursor", NoneType](
            _nonnull(self._as_BApplication(), "BApplication::ShowCursor"),
        )

    def HideCursor(self):
        """`void BApplication::HideCursor()`."""
        external_call["mojobe_BApplication_HideCursor", NoneType](
            _nonnull(self._as_BApplication(), "BApplication::HideCursor"),
        )

    def ObscureCursor(self):
        """`void BApplication::ObscureCursor()`."""
        external_call["mojobe_BApplication_ObscureCursor", NoneType](
            _nonnull(self._as_BApplication(), "BApplication::ObscureCursor"),
        )

    def IsCursorHidden(self) -> Bool:
        """`bool BApplication::IsCursorHidden() const`."""
        var _result = external_call["mojobe_BApplication_IsCursorHidden", Bool](
            _nonnull(self._as_BApplication(), "BApplication::IsCursorHidden"),
        )
        return _result

    def CountWindows(self) -> Int32:
        """`int32 BApplication::CountWindows() const`."""
        var _result = external_call["mojobe_BApplication_CountWindows", Int32](
            _nonnull(self._as_BApplication(), "BApplication::CountWindows"),
        )
        return _result

    def WindowAt(self, index: Int32) -> BWindowRef:
        """`BWindow* BApplication::WindowAt(int32 index) const`."""
        var _result = external_call["mojobe_BApplication_WindowAt", Int](
            _nonnull(self._as_BApplication(), "BApplication::WindowAt"),
            index,
        )
        return BWindowRef(_ptr_from(_result))

    def CountLoopers(self) -> Int32:
        """`int32 BApplication::CountLoopers() const`."""
        var _result = external_call["mojobe_BApplication_CountLoopers", Int32](
            _nonnull(self._as_BApplication(), "BApplication::CountLoopers"),
        )
        return _result

    def IsLaunching(self) -> Bool:
        """`bool BApplication::IsLaunching() const`."""
        var _result = external_call["mojobe_BApplication_IsLaunching", Bool](
            _nonnull(self._as_BApplication(), "BApplication::IsLaunching"),
        )
        return _result

    def Signature(self) -> String:
        """`const char* BApplication::Signature() const`."""
        var _result = external_call["mojobe_BApplication_Signature", Int](
            _nonnull(self._as_BApplication(), "BApplication::Signature"),
        )
        return _string_from(_result)

    def SetPulseRate(self, rate: Int64):
        """`void BApplication::SetPulseRate(bigtime_t rate)`."""
        external_call["mojobe_BApplication_SetPulseRate", NoneType](
            _nonnull(self._as_BApplication(), "BApplication::SetPulseRate"),
            rate,
        )

    def GetSupportedSuites(self, data: Some[_AsBMessage]) raises:
        """`status_t BApplication::GetSupportedSuites(BMessage* data)`."""
        var _result = external_call["mojobe_BApplication_GetSupportedSuites", Int32](
            _nonnull(
                self._as_BApplication(),
                "BApplication::GetSupportedSuites",
            ),
            _addr(data._as_BMessage()),
        )
        _check(_result, "BApplication::GetSupportedSuites")

    def PostMessage(self, command: UInt32) raises:
        """`status_t BLooper::PostMessage(uint32 command)`."""
        var _result = external_call["mojobe_BApplication_PostMessage__uint32", Int32](
            _nonnull(self._as_BApplication(), "BApplication::PostMessage"),
            command,
        )
        _check(_result, "BLooper::PostMessage")

    def PostMessage(self, message: Some[_AsBMessage]) raises:
        """`status_t BLooper::PostMessage(BMessage* message)`."""
        var _result = external_call["mojobe_BApplication_PostMessage__BMessageP", Int32](
            _nonnull(self._as_BApplication(), "BApplication::PostMessage"),
            _addr(message._as_BMessage()),
        )
        _check(_result, "BLooper::PostMessage")

    def CurrentMessage(self) -> BMessageRef:
        """`BMessage* BLooper::CurrentMessage() const`."""
        var _result = external_call["mojobe_BApplication_CurrentMessage", Int](
            _nonnull(self._as_BApplication(), "BApplication::CurrentMessage"),
        )
        return BMessageRef(_ptr_from(_result))

    def DetachCurrentMessage(self) -> BMessageRef:
        """`BMessage* BLooper::DetachCurrentMessage()`."""
        var _result = external_call["mojobe_BApplication_DetachCurrentMessage", Int](
            _nonnull(
                self._as_BApplication(),
                "BApplication::DetachCurrentMessage",
            ),
        )
        return BMessageRef(_ptr_from(_result))

    def IsMessageWaiting(self) -> Bool:
        """`bool BLooper::IsMessageWaiting() const`."""
        var _result = external_call["mojobe_BApplication_IsMessageWaiting", Bool](
            _nonnull(self._as_BApplication(), "BApplication::IsMessageWaiting"),
        )
        return _result

    def CountHandlers(self) -> Int32:
        """`int32 BLooper::CountHandlers() const`."""
        var _result = external_call["mojobe_BApplication_CountHandlers", Int32](
            _nonnull(self._as_BApplication(), "BApplication::CountHandlers"),
        )
        return _result

    def Loop(self):
        """`void BLooper::Loop()`."""
        external_call["mojobe_BApplication_Loop", NoneType](
            _nonnull(self._as_BApplication(), "BApplication::Loop"),
        )

    def Lock(self) -> Bool:
        """`bool BLooper::Lock()`."""
        var _result = external_call["mojobe_BApplication_Lock", Bool](
            _nonnull(self._as_BApplication(), "BApplication::Lock"),
        )
        return _result

    def Unlock(self):
        """`void BLooper::Unlock()`."""
        external_call["mojobe_BApplication_Unlock", NoneType](
            _nonnull(self._as_BApplication(), "BApplication::Unlock"),
        )

    def IsLocked(self) -> Bool:
        """`bool BLooper::IsLocked() const`."""
        var _result = external_call["mojobe_BApplication_IsLocked", Bool](
            _nonnull(self._as_BApplication(), "BApplication::IsLocked"),
        )
        return _result
